fixed iframe border issue

--- a/walkthrough(E3)/index.html
+++ b/walkthrough(E3)/index.html
@@ -63,7 +63,7 @@
         <img class="round-image three-corners" src='pictures\seals.jpg' alt=''>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86029.16545021122!2d-122.39475798755998!3d47.637571374233254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab2ff941f9b%3A0x70858bccb9902977!2sSeattle%20Coffee%20Works!5e0!3m2!1sen!2sus!4v1607288585452!5m2!1sen!2sus"
-          width="200" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          width="200" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </li>
       <li>
         <h3> San Diego Coffee House </h3>
@@ -72,7 +72,7 @@
         <img src='pictures\sunset.jpg' alt=''>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114548.91459879145!2d-122.43159414548225!3d47.70762751559424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x23684e4065e5ae10!2sBallard%20Coffee%20Works!5e0!3m2!1sen!2sus!4v1607288723961!5m2!1sen!2sus"
-          width="200" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          width="200" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </li>
     </ul>
   </aside>
