finished content for last 2 pages, css cusom reset and organization for css parts

--- a/employees.html
+++ b/employees.html
@@ -37,6 +37,27 @@
     </nav>
   </header>
   <main>
+    <section>
+      <h2>RedBeard</h2>
+      <img src="pictures/redfake.jpg" alt="">
+      <p> He is the captain of our ship and the wind in our sails </p>
+    </section>
+    <section>
+      <h2>Gray Beard</h2>
+      <img src="pictures/graybeard.jpg" alt="">
+      <p>We don't see him often as he is out fighting the Kraken and any other beast to get you the best beans around</p>
+    </section>
+    <section>
+      <h2>Ned</h2>
+      <img src="pictures/ned.jpg" alt="">
+      <p>The magical man behind our roasting awesomeness</p>
+      <p>Don't let the apron full you. His combination of water and fire is nothing short of him being the avatar</p>
+    </section>
+    <section>
+      <h2>Susan</h2>
+      <img src="pictures/susan.jpg" alt="">
+      <p>She prefers to not show her face on camera unless you are tasting the best coffee you have ever tasted. Stop in. She loves the mystique, you will love the coffee</p>
+    </section>
   </main>
   <aside class="">
   </aside>
