--- a/merch.html
+++ b/merch.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-  <h1>Our Merch</h1>
   <header>
     <nav>
       <!-- This will be hidden -->
@@ -37,8 +36,54 @@
     </nav>
   </header>
   <main>
+    <h1>Our Merch</h1>
+    <p>We sell things that make us happy, and hope you are happy too. Arrrgh!</p>
+    <section>
+      <h2>Coffee</h2>
+      <p>Try some of our coffee at the place that you feel the most free if not with us</p>
+      <img src="pictures/coffeecup.jpg" alt="">
+      <img src="pictures/coffeecup2.jpg" alt="">
+      <img src="pictures/coffeecup3.jpg" alt="">
+    </section>
+    <section>
+      <h2>Tshirts</h2>
+      <p>Sadly these are not made from our beans, but they are made with the same ferocity and expectation of a pirate</p>
+      <img src="pictures/tshirt.jpg" alt="">
+      <img src="pictures/tshirt2.jpg" alt="">
+      <img src="pictures/tshirt3.jpg" alt="">
+    </section>
+    <section>
+      <h2>The Pirate Lifestyle</h2>
+      <p>Sometimes, we need something to help us attain that which we seek.</p>
+      <img src="pictures/compass.jpg" alt="">
+      <p>Life may take you far, but you are only a step away</p>
+      <img src="pictures/watch.jpg" alt="">
+      <p>Time is measured in the moments that take our breath away not in the space between</p>
+      <img src="pictures/canoe.jpg" alt="">
+      <p>Hopefully, no one will try to put a price on what you want in life. We will always be here to help you reach your freedom</p>
+      <p><span>We are Pirate Coffee</span></p>
+    </section>
   </main>
   <aside class="">
+    <section>
+      <h2> Sip and Sail Opportunities </h2>
+      <p>Try some of our coffee while sailing with us</p>
+      <img src="pictures/boat.jpg" alt="">
+    </section>
+    <section>
+      <h2> Current Movie Showings </h2>
+      <p>Come watch a Pirate-themed movie with us while sipping some of our signature coffee drinks.</p>
+      <p>Popcorn and fun are free. </p>
+      <p>Movie times are below</p>
+      <img src="pictures/coin.jpg" alt="">
+      <section>
+        <h3>Pirates of the Carri <span>bean</span> </h3>
+        <ul>
+          <li>Show time 1</li>
+          <li>Show time 2</li>
+        </ul>
+      </section>
+    </section>
   </aside>
   <footer>
     <h2> The Plank </h2>
