--- a/process.html
+++ b/process.html
@@ -37,9 +37,45 @@
     </nav>
   </header>
   <main>
+    <section>
+      <h2>Selection</h2>
+      <p>Have you heard of the Boston Tea Party?</p>
+      <img src='pictures/canyon.jpg' alt=''>
+      <div>
+        <p>The mixture of tea with ocean water could tell tales</p>
+        <img src="pictures/drink.jpg" alt="">
+      </div>
+      <div>
+        <p>Our Selection is no different. We scavenge beans from all over the world that add only the best flavor and hints of adventure on your lips</p>
+        <img src="pictures/sail.jpg" alt="">
+      </div>
+    </section>
+    <section>
+      <h2>Roasting</h2>
+      <div class="">
+        <p> We first soak all our coffee beans in a salt-brine solution made from the sea, then roast the bins over a fire lit from driftwood. We finish off by grinding the beans using a sea-barnicle grinder </p>
+      </div>
+      <div class="">
+        <img src="pictures/ocean.jpg" alt="">
+      </div>
+      <div class="">
+        <img src="pictures/floatingwood.jpg" alt="">
+      </div>
+      <div class="">
+        <p>We have found that roasting for no less than 24 hours over open flame does more than just make the beans sizzle your tastebuds</p>
+      </div>
+      <div class="">
+        <img src="pictures/beanlove.jpg" alt="">
+      </div>
+      <div class="">
+        <p>Our roasting process is magical and imbues very special qualities to our beans. Maybe it is because they have been kissed by fairies. We can't say</p>
+        <img src="pictures/fairy.jpg" alt="">
+      </div>
+      <div class="">
+        <p>You must try it to believe us</p>
+      </div>
+    </section>
   </main>
-  <aside class="">
-  </aside>
   <footer>
     <h2> The Plank </h2>
     <section>
