--- a/walkthrough(E3)/index.html
+++ b/walkthrough(E3)/index.html
@@ -36,21 +36,21 @@
     <h2>Goals</h2>
     <section>
       <p> We are focused on each sip bringing the taste of the sea </p>
-      <img src='pictures\coffeebag.jpg' alt=''>
+      <img src="pictures/coffeebag.jpg" alt=''>
     </section>
     <section>
       <p>Life is more than just the sum of its parts. It involves identifying what you want in life and letting nothing stand in your way to getting it. </p>
-      <img src='pictures\pouringCoffee.jpg' alt=''>
+      <img src='pictures/pouringCoffee.jpg' alt=''>
     </section>
     <section>
       <p>We love the freedom of the sea. We want to bring that taste of freedom that we have procurred from all over the world to bring you the very best</p>
-      <img src='pictures\airplane.jpg' alt=''>
-      <img src='pictures\mountainResort.jpg' alt=''>
+      <img src='pictures/airplane.jpg' alt=''>
+      <img src='pictures/mountainResort.jpg' alt=''>
     </section>
     <section>
       <p>We are Pirate Coffee and we want to make the best coffee to ever hit your tastebuds</p>
-      <img src='pictures\mainInCoat.jpg' alt=''>
-      <img src='pictures\oldMan.jpg' alt=''>
+      <img src='pictures/mainInCoat.jpg' alt=''>
+      <img src='pictures/oldMan.jpg' alt=''>
     </section>
   </main>
   <aside class="">
@@ -58,18 +58,18 @@
     <ul>
       <li>
         <h3> Seattle Coffee House </h3>
-        <img src='pictures\bouy.jpg' alt=''>
-        <img class="round-image" src='pictures\pier.jpg' alt=''>
-        <img class="round-image three-corners" src='pictures\seals.jpg' alt=''>
+        <img src='pictures/bouy.jpg' alt=''>
+        <img class="round-image" src='pictures/pier.jpg' alt=''>
+        <img class="round-image three-corners" src='pictures/seals.jpg' alt=''>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86029.16545021122!2d-122.39475798755998!3d47.637571374233254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab2ff941f9b%3A0x70858bccb9902977!2sSeattle%20Coffee%20Works!5e0!3m2!1sen!2sus!4v1607288585452!5m2!1sen!2sus"
           width="200" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </li>
       <li>
         <h3> San Diego Coffee House </h3>
-        <img src='pictures\pier2.jpg' alt=''>
-        <img src='pictures\beach.jpg' alt=''>
-        <img src='pictures\sunset.jpg' alt=''>
+        <img src='pictures/pier2.jpg' alt=''>
+        <img src='pictures/beach.jpg' alt=''>
+        <img src='pictures/sunset.jpg' alt=''>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114548.91459879145!2d-122.43159414548225!3d47.70762751559424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x23684e4065e5ae10!2sBallard%20Coffee%20Works!5e0!3m2!1sen!2sus!4v1607288723961!5m2!1sen!2sus"
           width="200" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
