worked on design of index page

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
   <title>Our Brand</title>
 </head>
 
-<body>
-  <h1>Our Brand</h1>
-  <header>
-    <nav>
+<body class="">
+  <header class="hero-splash">
+    <h1>Our Brand</h1>
+    <nav class="bg-dark-2 ">
       <!-- This will be hidden -->
-      <h2>Navigation</h2>
-      <ul>
-        <li>
-          <a href="#">Icon Placeholder</a>
+      <h2 class="screen-reader-only">Navigation</h2>
+      <ul class=" navigation  ">
+        <li class=" logo navigation__item navigation__item-active navigation__item--left">
+          <a class="link f-light-1" href="#">Icon Placeholder</a>
         </li>
-        <li>
-          <a href="#">Our Brand</a>
+        <li class=" navigation__item navigation__item--center">
+          <a class="link f-light-1" href="#">Our Brand</a>
         </li>
-        <li>
-          <a href="process.html">Our Process</a>
+        <li class=" navigation__item navigation__item--center">
+          <a class="link f-light-1" href="process.html">Our Process</a>
         </li>
-        <li>
-          <a href="employees.html">Our Employees</a>
+        <li class=" navigation__item navigation__item--center">
+          <a class="link f-light-1" href="employees.html">Our Employees</a>
         </li>
-        <li>
-          <a href="merch.html">Our Merch</a>
+        <li class=" navigation__item navigation__item--right">
+          <a class="link f-light-1" href="merch.html">Our Merch</a>
         </li>
       </ul>
     </nav>
@@ -57,9 +57,9 @@
       <img src='pictures/oldMan.jpg' alt=''>
     </section>
   </main>
-  <aside class="">
+  <aside class="bg-dark-2 f-light-1">
     <h2>Locations</h2>
-    <ul>
+    <ul class="container">
       <li>
         <h3> Seattle Coffee House </h3>
         <img src='pictures/bouy.jpg' alt=''>
@@ -80,7 +80,7 @@
       </li>
     </ul>
   </aside>
-  <footer>
+  <footer class="bg-bold f-dark-1">
     <h2> The Plank </h2>
     <section>
       <h3> Contact Info </h3>
